--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ nav{
     padding: 5px 0;
 }
 nav .logo{
-    width: 120px;
+    width: 110px;
     cursor: pointer;
     font-size: 30px;
     font-style: oblique;
@@ -45,4 +45,40 @@ nav ul li a {
     text-decoration: none;
     color: White;
     font-size: 16px;
+}
+button.btn{
+    padding: 10px 20px;
+    font-size: 20px;
+    font-weight: bold;
+    font-style: italic;
+    margin-top: 0;
+    border-color: transparent;
+    transition: border-color .3s;
+}
+section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px 0;
+}
+.form-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: auto;
+}
+.form-wrapper .card{
+    width: 360px;
+    padding: 20px;
+    background-color: rgb(0 0 0 /35%);
+}
+.card-header {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 30px 20px 0;
+    font-size: 1.1rem;
+    color: #94f7e6;
+    box-shadow: 2px 3px 7px #d3f7ff71;
+    border-radius: 50px;
 }
