Formulaire de html css et js

--- a/style.css
+++ b/style.css
@@ -58,3 +58,9 @@ body {
     z-index: 1;
     border-radius: 10px;
 }
+.form-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 60vh;
+}
