--- a/style.css
+++ b/style.css
@@ -64,3 +64,34 @@ body {
     align-items: center;
     min-height: 60vh;
 }
+.form-box .form h2 {
+    font-size: 32px;
+    color: #fff;
+    text-align: center;
+}
+.form .input-box {
+    position: relative;
+    margin: 30px 0;
+    width: 310px;
+    border-bottom: 2px solid #fff;
+}
+.input-box input{
+    width: 100%;
+    height: 50px;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    padding: 0 35px 0 5px;
+    color: #fff;
+}
+.input-box label{
+    position: absolute;
+    color: #fff;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    font-size: 16px;
+    pointer-events: none;
+    transform: .3s;
+}
